--- a/Results.UnitTests/Results.UnitTests.csproj
+++ b/Results.UnitTests/Results.UnitTests.csproj
@@ -4,6 +4,7 @@
         <TargetFramework>net8.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <RootNamespace>LH.Results.UnitTests</RootNamespace>
 
         <IsPackable>false</IsPackable>
         <IsTestProject>true</IsTestProject>
