HT-236: Publish package to Nuget registry

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -18,10 +18,6 @@ jobs:
               with:
                   dotnet-version: 8.x
 
-            - name: Add Nuget source
-              run: |
-                  dotnet nuget add source --username ${{ secrets.NUGET_USERNAME }} --password ${{ secrets.NUGET_TOKEN }} --store-password-in-clear-text --name github "https://nuget.pkg.github.com/${{ github.repository_owner }}/index.json"
-
             - name: Install dependencies
               run: dotnet restore
 
@@ -35,7 +31,7 @@ jobs:
               run: dotnet pack --no-build --configuration Release
 
             - name: Publish
-              run: dotnet nuget push ./Results/bin/Release/*.nupkg --api-key ${{ secrets.NUGET_TOKEN }} --source "github"
+              run: dotnet nuget push ./Results/bin/Release/*.nupkg --api-key ${{ secrets.NUGET_TOKEN }} --source https://api.nuget.org/v3/index.json
 
             - name: Bump version
               uses: KageKirin/bump-csproj-version@v0
